src/mongo/db/pipeline/change_stream_event_transform.cpp
@@ -158,9 +158,11 @@ ResumeTokenData ChangeStreamEventTransformation::makeResumeToken(Value tsVal,
     auto clusterTime = tsVal.getTimestamp();
 
     // If we have a resume token, we need to match the version with which it was generated until we
-    // have surpassed it, at which point we can begin generating tokens with our default version.
-    auto version = (clusterTime > _resumeToken.clusterTime) ? _expCtx->changeStreamTokenVersion
-                                                            : _resumeToken.version;
+    // have surpassed all events against which it may have been compared in the original stream, at
+    // which point we can begin generating tokens with our default version.
+    auto version = (clusterTime > _resumeToken.clusterTime || txnOpIndex > _resumeToken.txnOpIndex)
+        ? _expCtx->changeStreamTokenVersion
+        : _resumeToken.version;
 
     // Construct and return the final resume token.
     return {clusterTime, version, txnOpIndex, uuid, operationType, documentKey, opDescription};
