src/mongo/s/query/cluster_aggregate.cpp
@@ -380,7 +380,6 @@ Status ClusterAggregate::runAggregate(OperationContext* opCtx,
         // since the 'fragmentNum' field only exists in this version and later.
         if (hasChangeStream && liteParsedPipeline.endsWithChangeStreamSplitLargeEvent()) {
             expCtx->changeStreamTokenVersion = 2;
-            expCtx->ignoreTokenVersionOnResume = true;
         }
 
         // Parse and optimize the full pipeline.
